[tool.poetry]
name = "test_flask_api"
version = "0.1.0"
description = ""
authors = ["ktman-ktman <ktym.disk.mobile.note@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
Flask = "^2.0.2"
openpyxl = "^3.0.9"
Flask-API = "^3.0.post1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.930"
isort = "^5.10.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
